--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,16 +3,22 @@ name = "python_web_server_template"
 version = "0.1.0"
 description = "Default template for PDM package"
 authors = [
-    {name = "boholder", email = "bottleholder@anche.no"},
+    { name = "boholder", email = "bottleholder@anche.no" },
 ]
 dependencies = [
     "fastapi>=0.110.0",
     "uvicorn[standard]>=0.27.1",
+    # The starlette.testclient module requires the httpx package to be installed.
+    "httpx>=0.27.0",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
-license = {text = "MIT"}
+license = { text = "MIT" }
 
+[tool.pdm.dev-dependencies]
+test = [
+    "pytest>=8.0.2",
+]
 
 [tool.pdm]
 distribution = false
@@ -20,3 +26,4 @@ distribution = false
 # Scripts for development
 [tool.pdm.scripts]
 dev = "uvicorn python_web_server_template.main:app --reload"
+test = "pytest"
