--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,17 @@ authors = [
     { name = "boholder", email = "bottleholder@anche.no" },
 ]
 dependencies = [
+    # Web application framework
     "fastapi>=0.110.0",
+    # Underlying web server
     "uvicorn[standard]>=0.27.1",
     # The starlette.testclient module requires the httpx package to be installed.
     "httpx>=0.27.0",
     # For using X-Request-ID HTTP header or self-generated id as trace id shown in logs
     # ref: https://github.com/snok/asgi-correlation-id
     "asgi-correlation-id>=4.3.1",
+    # For config file parsing
+    "pyyaml>=6.0.1",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
