--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "asgi-correlation-id>=4.3.1",
     # For config file parsing
     "pyyaml>=6.0.1",
+    "pydantic>=2.6.3",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
@@ -32,5 +33,5 @@ distribution = false
 
 # Scripts for development
 [tool.pdm.scripts]
-dev = "python app/main.py"
+dev = "python app/main.py --debug"
 test = "pytest"
