--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ distribution = false
 [tool.pdm.scripts]
 dev = "python app/main.py --debug"
 test = "pytest"
+lint = "pre-commit run --all-files"
 
 [tool.pytest.ini_options]
 pythonpath = ["app", "tests"]
@@ -45,3 +46,27 @@ filterwarnings = [
     # Let's ignore it.
     "ignore:The \\'app\\' shortcut is now deprecated. Use the explicit style \\'transport=WSGITransport\\(app=\\.\\.\\.\\)\\' instead\\.",
 ]
+
+[tool.ruff]
+line-length = 120
+exclude = ["tests/fixtures"]
+target-version = "py311"
+src = ["app"]
+
+[tool.ruff.lint]
+extend-select = [
+    "I", # isort
+    "B", # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "PGH", # pygrep-hooks
+    "RUF", # ruff
+    "W", # pycodestyle
+    "YTT", # flake8-2020
+]
+extend-ignore = ["B018", "B019", "RUF018"]
+
+[tool.ruff.lint.mccabe]
+max-complexity = 10
+
+[tool.ruff.lint.isort]
+known-first-party = ["app"]
