Add "a" pdm script for running lint and test while developing

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
 # Shamelessly copied from https://github.com/pdm-project/pdm/blob/main/.pre-commit-config.yaml
 # Thank you PDM!
+# See [tool.ruff] part in pyproject.toml for detailed configuration.
 
 ci:
   autoupdate_schedule: monthly
