--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "pyyaml>=6.0.1",
     # For data object parsing
     "pydantic>=2.6.3",
+    # Use alibaba nacos as service discovery mechanism
+    "nacos-sdk-rust-binding-py>=0.3.5",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
