--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ license = { text = "MIT" }
 [tool.pdm.dev-dependencies]
 test = [
     "pytest>=8.0.2",
+    "pytest-asyncio>=0.23.5",
 ]
 
 [tool.pdm]
@@ -55,6 +56,10 @@ filterwarnings = [
     # fastapi.testclient.TestClient -> starlette -> httpx
     # Let's ignore it.
     "ignore:The \\'app\\' shortcut is now deprecated. Use the explicit style \\'transport=WSGITransport\\(app=\\.\\.\\.\\)\\' instead\\.",
+    # This's triggered by pytest-asyncio,
+    # which calls deprecated asyncio.get_event_loop() method
+    # ref: https://github.com/pytest-dev/pytest-asyncio/issues/757
+    "ignore:There is no current event loop",
 ]
 
 [tool.ruff]
