--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ license = { text = "MIT" }
 test = [
     "pytest>=8.0.2",
     "pytest-asyncio>=0.23.5",
+    "pre-commit>=3.6.2",
 ]
 
 [tool.pdm]
