--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "nbformat[fast]>=5.10.3",
     # For connecting to redis
     "redis>=5.0.3",
+    "aiokafka>=0.10.0",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
