--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,5 +91,9 @@ max-complexity = 10
 [tool.ruff.lint.isort]
 known-first-party = ["app"]
 
+# https://github.com/codespell-project/codespell?tab=readme-ov-file#using-a-config-file
+[tool.codespell]
+ignore-words-list = ["ba", "te", "falsy"]
+
 [project.scripts]
 myapp = "app.__main__:main"
